<resources>
    <string name="app_name">GPACalculator</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>

    <!-- Fragment Strings -->
    <string name="home_fragment">Home fragment</string>
    <string name="classgpa_blank_fragment">Class GPA fragment</string>
    <string name="profile_blank_fragment">Profile fragment</string>
    <string name="log_out">log out</string>
    <string name="user_gpa">3.5</string>
    <string name="user_s_gpa">GPA</string>
    <string name="profile_log_out">Log out</string>
    <string name="username">User\'s name</string>
    <string name="user_profile_pic">TODO</string>
    <string name="string_textview">textView</string>
    <string name="add_assigments">Add Assigments</string>
    <string name="assigment_name">Assigment Name</string>
    <string name="add_assigment">Add Assigment</string>
    <string name="grade">Grade</string>
    <string name="string_grade">Grade</string>
    <string name="weight">Weight</string>
    <string name="string_weight">Weight</string>
    <string name="section_name">Section Name</string>
    <string name="name">Name</string>
    <string name="worth_percentage">Worth (Percentage)</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="course_name">Course Name</string>
    <string name="credits">Credits</string>
    <string name="delete_all">delete all</string>
    <string-array name="courseGradesLetters">
        <item>A+</item>
        <item>A</item>
        <item>A-</item>
        <item>B+</item>
        <item>B</item>
        <item>B-</item>
        <item>C+</item>
        <item>C</item>
        <item>C-</item>
        <item>D+</item>
        <item>D</item>
        <item>D-</item>
        <item>F</item>
    </string-array>
</resources>