<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssigmentActivity">

    <EditText
        android:id="@+id/assigmentNameET"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/assigment_name"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="6dp" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_weight"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintTop_toBottomOf="@+id/assigmentNameET"
        tools:layout_editor_absoluteX="7dp" />

    <EditText
        android:id="@+id/gradeET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/string_grade"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/weightET"
        tools:layout_editor_absoluteX="6dp" />

    <Button
        android:id="@+id/addAssigmentBtn"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/add_assigment"
        app:layout_constraintTop_toBottomOf="@+id/gradeET"
        tools:layout_editor_absoluteX="6dp" />
</androidx.constraintlayout.widget.ConstraintLayout>