<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCourse">

    <TextView
        android:id="@+id/createCourseName"
        android:layout_width="157dp"
        android:layout_height="36dp"
        android:text="@string/course_name"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/courseNameInput"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/createCourseName"
        android:layout_centerHorizontal="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/createCreditText"
        android:layout_width="189dp"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        android:text="@string/credits"
        android:layout_below="@id/courseNameInput"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/creditsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/createCreditText"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:layout_centerHorizontal="true"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/createGradeTextCourse"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:text="@string/grade"
        android:layout_below="@id/creditsInput"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerGradeLetter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/createGradeTextCourse"
        android:layout_centerHorizontal="true"
        android:background="@drawable/drawable_for_spinner"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/submitCourseBtn"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_below="@id/spinnerGradeLetter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/light_green"
        android:text="@string/submit"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>